--- a/AdventOfCode2025/AdventOfCode2025.csproj
+++ b/AdventOfCode2025/AdventOfCode2025.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="Microsoft.Z3" Version="4.12.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="input\" />
+  </ItemGroup>
+
 </Project>
